<?xml version="1.0"?>
<package format="2">
  <name>vehicle_launch</name>
  <version>2.0.0</version>
  <description>The vehicle_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="erin@robotics88.com">erin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>foxglove_bridge</depend>
  <depend>rclcpp</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros_extras</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
